--- a/adblock-betafish/options/bug-report.html
+++ b/adblock-betafish/options/bug-report.html
@@ -106,9 +106,7 @@
             >
             <textarea id="actual-result" class="widest"></textarea>
             <div class="flex-end">
-              <button type="button" class="btn short red" id="step1-next">
-                Next
-              </button>
+              <button type="button" class="btn short red" id="step1-next">Next</button>
             </div>
           </div>
 
@@ -119,9 +117,7 @@
             >
             <textarea id="debug-info" class="widest" disabled></textarea>
             <div class="flex-end">
-              <button type="button" class="btn short grey" id="step2-back">
-                Back
-              </button>
+              <button type="button" class="btn short grey" id="step2-back">Back</button>
               <button type="button" class="btn short red" id="submit">Submit</button>
             </div>
           </div>
