--- a/adblock-betafish/options/customize.html
+++ b/adblock-betafish/options/customize.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!-- Start: Premium Sync CTA -->
-<section class="sync-cta bottom-line" style="display: none;">
+<section class="sync-cta bottom-line" style="display: none">
   <section class="get-sync-cta" id="locked-user-pay-section-customize">
     <p>
       <span i18n="save_custom_settings_cta"></span>
@@ -20,7 +20,7 @@
       </button>
     </section>
   </section>
-  <section class="goodbye-sync-cta" style="display: none;">
+  <section class="goodbye-sync-cta" style="display: none">
     <p>
       <span i18n="wont_show_again"></span>
       <span i18n="check_out_premium" i18n_replacement_el="premium-from-customize">
@@ -46,7 +46,7 @@
             <i class="material-icons md-18" role="img" aria-hidden="true">arrow_drop_down_circle</i>
           </span>
         </a>
-        <div id="divUrlBlock" class="addControls" style="display:none;">
+        <div id="divUrlBlock" class="addControls" style="display: none">
           <table class="customize-entry-table">
             <tr>
               <td i18n="blockurlwithtext" colspan="2" class="italic light-grey-text"></td>
@@ -86,7 +86,7 @@
             <i class="material-icons md-18" role="img" aria-hidden="true">arrow_drop_down_circle</i>
           </span>
         </a>
-        <div id="divCssBlock" class="addControls" style="display:none;">
+        <div id="divCssBlock" class="addControls" style="display: none">
           <p class="italic light-grey-text" i18n="blacklistclickmessage"></p>
           <table class="customize-entry-table">
             <tr>
@@ -133,7 +133,7 @@
             <i class="material-icons md-18" role="img" aria-hidden="true">arrow_drop_down_circle</i>
           </span>
         </a>
-        <div id="divExcludeBlock" class="addControls" style="display:none;">
+        <div id="divExcludeBlock" class="addControls" style="display: none">
           <div class="exclude-block-grid" dir="ltr">
             <span
               i18n="excludedomainorurl"
@@ -171,7 +171,7 @@
             <i class="material-icons md-18" role="img" aria-hidden="true">arrow_drop_down_circle</i>
           </span>
         </a>
-        <div id="divBlacklistBlock" class="addControls" style="display:none;">
+        <div id="divBlacklistBlock" class="addControls" style="display: none">
           <div class="blacklist-block-grid">
             <span
               i18n="only_block_ads_on_these_sites"
@@ -222,7 +222,7 @@
           id="btnEditAdvancedFilters"
           i18n="buttonedit"
         ></button>
-        <span id="spanSaveButton" style="display:none;">
+        <span id="spanSaveButton" style="display: none">
           <span class="savereminder bold standout-message" i18n="savereminder"></span>
           <button
             type="button"
@@ -265,7 +265,7 @@
       <textarea id="txtMigrationErrorMessage" class="widest" disabled></textarea>
     </div>
 
-    <div id="divExcludeFilters" style="display:none;">
+    <div id="divExcludeFilters" style="display: none">
       <div class="space-between-line">
         <h2 i18n="manualexcludefilteredit2" class="paragraph-title"></h2>
         <span>
@@ -275,7 +275,7 @@
             id="btnEditExcludeAdvancedFilters"
             i18n="buttonedit"
           ></button>
-          <span id="spanSaveExcludeButton" style="display:none;">
+          <span id="spanSaveExcludeButton" style="display: none">
             <span class="savereminder bold standout-message" i18n="savereminder"></span>
             <button
               type="button"
