--- a/adblock-betafish/options/distractioncontrol.html
+++ b/adblock-betafish/options/distractioncontrol.html
@@ -6,7 +6,7 @@
       <section
         id="locked-user-pay-section-distraction-control"
         class="bottom-line"
-        style="display: none;"
+        style="display: none"
       >
         <p i18n="myadblock_short_description_to_pay"></p>
         <a
@@ -46,7 +46,7 @@
       <div id="distraction-control-filter-lists"></div>
       <div class="translation_credits italic do-not-display"></div>
     </section>
-    <footer style="display: none;" class="myadblock_feedback_footer">
+    <footer style="display: none" class="myadblock_feedback_footer">
       <section>
         <h2 i18n="myadblock_feedback_title"></h2>
         <p i18n="myadblock_feedback_info"></p>
