--- a/adblock-betafish/options/filters.html
+++ b/adblock-betafish/options/filters.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!-- Start: Premium Sync CTA -->
-<section class="sync-cta bottom-line" style="display: none;">
+<section class="sync-cta bottom-line" style="display: none">
   <section class="get-sync-cta" id="locked-user-pay-section-filters">
     <p>
       <span i18n="save_custom_settings_cta"></span>
@@ -20,7 +20,7 @@
       </button>
     </section>
   </section>
-  <section class="goodbye-sync-cta" style="display: none;">
+  <section class="goodbye-sync-cta" style="display: none">
     <p>
       <span i18n="wont_show_again"></span>
       <span i18n="check_out_premium" i18n_replacement_el="premium-from-filters">
