--- a/adblock-betafish/options/stats-tabs.html
+++ b/adblock-betafish/options/stats-tabs.html
@@ -211,7 +211,7 @@
                 </li>
               </ul>
             </span>
-            <span id="siteBlocks" class="statstab" style="display: none;">
+            <span id="siteBlocks" class="statstab" style="display: none">
               <ul>
                 <li>
                   <a data-filter-function-name="today" class="statstablink">
