--- a/adblock-betafish/options/support.html
+++ b/adblock-betafish/options/support.html
@@ -64,7 +64,7 @@
         <span id="whatsnew" class="link-text-color"></span>
       </a>
     </div>
-    <textarea id="changes" class="widest" style="display:none;"></textarea>
+    <textarea id="changes" class="widest" style="display: none"></textarea>
 
     <div class="translation_credits italic do-not-display"></div>
     <footer class="myadblock_feedback_footer">
