--- a/adblock-betafish/options/themes-mab.html
+++ b/adblock-betafish/options/themes-mab.html
@@ -4,7 +4,7 @@
   <div class="option-page-content mab-sub-tab">
     <section>
       <!-- Start: Payment section visible only to free MAB users -->
-      <section id="locked-user-pay-section-themes" class="bottom-line" style="display: none;">
+      <section id="locked-user-pay-section-themes" class="bottom-line" style="display: none">
         <p i18n="myadblock_short_description_to_pay"></p>
         <a
           id="get-it-now-themes"
