--- a/adblock-betafish/options/image-swap.html
+++ b/adblock-betafish/options/image-swap.html
@@ -3,7 +3,7 @@
 <div class="option-page-box mab-page-box">
   <div class="option-page-content mab-sub-tab">
     <!-- Start: Payment section visible only to free MAB users -->
-    <section id="locked-user-pay-section-image-swap" class="bottom-line" style="display: none;">
+    <section id="locked-user-pay-section-image-swap" class="bottom-line" style="display: none">
       <p i18n="myadblock_short_description_to_pay"></p>
       <a
         id="get-it-now-image-swap"
