--- a/adblock-betafish/options/index.html
+++ b/adblock-betafish/options/index.html
@@ -123,7 +123,7 @@
         </section>
 
         <section id="sidebar-content-bottom">
-          <section id="rate-us-cta" class="hover-shadow" style="display: none;">
+          <section id="rate-us-cta" class="hover-shadow" style="display: none">
             <section id="rate-us-tooltip">
               <div i18n="show_some_love"></div>
               <div i18n="support_with_a_review"></div>
@@ -140,7 +140,7 @@
               <span i18n="love_adblock"></span>
             </a>
           </section>
-          <section id="waitlist-cta" class="hover-shadow" style="display: none;">
+          <section id="waitlist-cta" class="hover-shadow" style="display: none">
             <section id="waitlist-tooltip">
               <div i18n="vpn_coming_soon"></div>
               <div i18n="join_vpn_waitlist"></div>
@@ -158,7 +158,7 @@
             </a>
           </section>
 
-          <section id="mail-dialog" style="display: none;" class="cta-speech-bubble">
+          <section id="mail-dialog" style="display: none" class="cta-speech-bubble">
             <section id="mail-dialog-content">
               <div id="mail-dialog-header">
                 <span i18n="keep_touch"></span>
@@ -210,7 +210,7 @@
             </section>
           </section>
 
-          <section id="mail-cta" style="display: none;">
+          <section id="mail-cta" style="display: none">
             <span i18n="adblock_newsletter" class="hover-shadow btn secondary"></span>
           </section>
 
