--- a/adblock-betafish/options/mab.html
+++ b/adblock-betafish/options/mab.html
@@ -4,7 +4,7 @@
   <div class="option-page-content">
     <section>
       <!-- Start: Payment section visible only to free MAB users -->
-      <section id="locked-user-pay-section-mab" class="bottom-line" style="display: none;">
+      <section id="locked-user-pay-section-mab" class="bottom-line" style="display: none">
         <p i18n="myadblock_short_description_to_pay"></p>
         <a
           id="get-it-now-mab"
@@ -27,7 +27,7 @@
           i18n="manage_subscription"
           href="#"
           target="_blank"
-          style="display: none;"
+          style="display: none"
         ></a>
       </header>
 
@@ -112,7 +112,7 @@
       <div class="translation_credits italic do-not-display"></div>
     </section>
 
-    <footer style="display: none;" class="myadblock_feedback_footer">
+    <footer style="display: none" class="myadblock_feedback_footer">
       <section>
         <h2 i18n="myadblock_feedback_title"></h2>
         <p i18n="myadblock_feedback_info"></p>
