--- a/adblock-betafish/options/sync.html
+++ b/adblock-betafish/options/sync.html
@@ -13,7 +13,7 @@
   <div class="option-page-content mab-sub-tab">
     <section>
       <!-- Start: Payment section visible only to free MAB users -->
-      <section id="locked-user-pay-section-sync" class="bottom-line" style="display: none;">
+      <section id="locked-user-pay-section-sync" class="bottom-line" style="display: none">
         <p i18n="myadblock_short_description_to_pay"></p>
         <a
           id="get-it-now-sync"
@@ -32,7 +32,7 @@
           >
           <h1 id="sync-title" i18n="sync_tab_item" class="page-title"></h1>
         </div>
-        <div id="toggle-sync-details" class="content-block" style="display: none;">
+        <div id="toggle-sync-details" class="content-block" style="display: none">
           <p></p>
           <i class="material-icons md-24" role="img" aria-hidden="true"></i>
         </div>
@@ -60,17 +60,17 @@
         class="btn yellow"
         target="_blank"
         href="https://getadblock.com/premium/enrollment/"
-        style="display: none;"
+        style="display: none"
       ></a>
       <button
         id="btnCheckStatus"
         class="btn"
         i18n="check_sync_status"
         type="button"
-        style="display: none;"
+        style="display: none"
       ></button>
 
-      <div id="sync-info-block" style="display: none;">
+      <div id="sync-info-block" style="display: none">
         <div id="sync-extension-block" class="bottom-line content-block">
           <div
             id="sync_extension_section_list_title"
@@ -97,15 +97,15 @@
             i18n="buttoncancel"
             class="btn non-focused-btn"
             type="button"
-            style="display: none;"
+            style="display: none"
           ></button>
-          <div id="show-verify-message" class="content-block" style="display: none;">
+          <div id="show-verify-message" class="content-block" style="display: none">
             <i id="alert-icon" class="material-icons md-24" role="img" aria-hidden="true"
               >warning</i
             >
             <div i18n="sync_verify_turn_on_text"></div>
           </div>
-          <div id="verify-overwrite-div" class="content-block" style="display: none;">
+          <div id="verify-overwrite-div" class="content-block" style="display: none">
             <button
               i18n="buttonok"
               class="btn red button-pair"
@@ -161,7 +161,7 @@
           >
         </div>
         <div id="sync-extension-list-div"></div>
-        <div id="enter-name-div" style="display: none;">
+        <div id="enter-name-div" style="display: none">
           <div id="enter-name-child-div">
             <input
               id="extension-name"
